tests/paczka1/small_fuzzy/18760076.err
Error in line 12: qK8Jt8l5 S962 46,7
Error in line 7: JxOwk0s0G S845 83,5
